# virtual-machine-manager

./: .gitattributes  LICENSE  README.md  pyproject.toml
extras/networking/: br-local.netdev  br-local.network  resolved.conf
profiles/linux-desktop/: profile.json
profiles/linux-server-compat/: profile.json
profiles/windows-10/: profile.json
profiles/windows-10/unattended/: autounattend.xml  setup.bat  setup.ps1
profiles/windows-11/: profile.json  unattended
profiles/windows-8.1/: profile.json
profiles/windows-server-2022/: profile.json
vmm/: main.py
vmm/data/: OVMF_CODE.fd  OVMF_CODE_4M.ms.fd  OVMF_VARS.fd  OVMF_VARS_4M.ms.fd
