[tool.poetry]
name = "vmm"
version = "0.1.2"
description = "Manage your Qemu VMs with Systemd"
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"

[tool.poetry.scripts]
vmm = "vmm.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
